--- a/style/popup.css
+++ b/style/popup.css
@@ -2,7 +2,7 @@
 
 .user-post-container {
     /* Create Post */
-    width: 90%;
+    width: 95%;
     border-radius: 20px;
     border: 0.75px solid #2C394B;
     padding: 10px;
